[package]
name = "wallet_api"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
tokio = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# 导入Crate Setting
settings = { path = "../../crates/settings" }

# 导入Crate Reef Tracing
reef_tracing = { path = "../../crates/reef_tracing" }