[package]
name = "primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
typeshare = { workspace = true }
num-bigint = { workspace = true }
async-trait = { workspace = true }
