[package]
name = "reef_client"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "HTTP client for Reef Core API"

[dependencies]
async-trait = "0.1.81"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
