[package]
name = "reef_jsonrpc"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "JSON-RPC client for Reef Core API"

[dependencies]
reef_client = { path = "../reef_client" }
async-trait = "0.1.81"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
