[package]
name = "reef_solana"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Solana support for Reef Core API"


[dependencies]
async-trait = "0.1.81"
primitives = { path = "../primitives" }
reef_client = { path = "../reef_client" }
reef_jsonrpc = { path = "../reef_jsonrpc" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
base64 = "0.22.1"
tracing = { workspace = true }
anyhow = "1.0"
thiserror = "1.0"
bs58 = "0.5"
borsh = { workspace = true }
sha2 = { workspace = true }
curve25519-dalek = { workspace = true }
serde_serializers = { path = "../serde_serializers" }
